Move handoff modules to module path (#3090)
When maven-compiler-plugin 4.x hands off module-info-patch.args, treat
it as the single source of truth for the forked JVM: emit its
directives verbatim and drop surefire's auto-generated
--add-reads ALL-UNNAMED / --add-modules ALL-MODULE-PATH, which remain
as fallback when the file is absent.

Precondition: the modules listed by the file's --add-modules (the
test-scope dependencies, e.g. the JUnit engine) must be named modules
in the fork's boot layer, so their elements move from the class-path to
the module path - together with their transitive requires closure,
every test or provider classpath element requiring one of the moved
modules, and an explicit resolution root per moved module. Surefire's
--add-opens for reflective test access now targets ALL-UNNAMED plus
the moved named modules instead of ALL-UNNAMED alone.

The new ModuleInfoPatchArgsFile parses the handoff file (same-line and
two-line option form) and exposes its --add-modules names.

Verified: maven-surefire-common 857/857 unit tests green; ITs green on
Maven 3.10.0-rc-1 (fallback byte-identical) and 4.0.0-rc-5;
acceptance: jigsaw example_test/m4 (1/1) and Vidocq champollion-json
(602/602) zero-config under the enforced module system.

Fixes #3090.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>